--- a/imgui.ini
+++ b/imgui.ini
@@ -111,8 +111,7 @@ Collapsed=0
 DockId=0x00000001,2
 
 [Window][Settings]
-ViewportPos=2810,575
-ViewportId=0x1C33C293
+Pos=1462,363
 Size=458,680
 Collapsed=0
 
